# sudachi.rs

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
sudachi/: Cargo.toml
sudachi/benches/: tokenize.rs
sudachi/benches/common/: mod.rs
sudachi/examples/: dhat_alloc.rs
sudachi/src/: analysis.rs  config.rs  dic.rs  error.rs  lib.rs  plugin.rs  test.rs  text_normalizer.rs
sudachi/src/analysis/: dictionary_access.rs  inner.rs  lattice.rs  mlist.rs  mod.rs  mode.rs  morpheme.rs  node.rs  owned_morpheme.rs  stateful_tokenizer.rs  stateless_tokenizer.rs  strings_cache.rs
sudachi/src/dic/: binary_loader.rs  build.rs  category_type.rs  character_category.rs  connect.rs  description.rs  dictionary.rs  dictionary_access.rs  grammar.rs  header.rs  lexicon.rs  lexicon_set.rs  loader.rs  mod.rs  pos.rs  read.rs  strings_cache.rs  subset.rs  word_id.rs  word_info.rs
sudachi/src/dic/lexicon/: strings.rs  trie.rs  word_id_table.rs  word_infos.rs  word_params.rs
sudachi/src/dic/read/: error.rs  u16str.rs  utf16_string.rs  utf8_string.rs  varint.rs  word_id.rs  word_info.rs
sudachi/src/dic/word_info/: binary.rs  data.rs  infos.rs  layout.rs  parse.rs  raw.rs  variable_io.rs
sudachi/src/input_text/: buffer.rs
sudachi/src/input_text/buffer/: edit.rs  mod.rs
sudachi/src/plugin/: loader.rs  mod.rs  path_rewrite.rs
sudachi/src/plugin/connect_cost/: inhibit_connection.rs
sudachi/src/plugin/input_text/: default_input_text.rs  ignore_yomigana.rs  prolonged_sound_mark.rs
sudachi/src/plugin/oov/: mecab_oov.rs  regex_oov.rs  simple_oov.rs
sudachi/src/plugin/oov/mecab_oov/: test.rs
sudachi/src/plugin/path_rewrite/: join_katakana_oov.rs  join_numeric.rs
sudachi/src/util/: cow_array.rs  testing.rs
sudachi/tests/: common.rs  dictionary.rs  dictionary_from_bytes.rs  dictionary_header.rs  lexicon.rs  morpheme.rs  stateless_pool.rs
sudachi/tests/resources/: char.def  lex.csv  split_alpha.csv  system.dic.test  user.dic.test  user1.csv  user2.csv
(+477 files in other folders)
